--- a/app/src/main/res/layout/activity_list_restaurants.xml
+++ b/app/src/main/res/layout/activity_list_restaurants.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.victordasilva.hangry.ListRestaurantsActivity">
+    tools:context="com.example.victordasilva.hangry.activities.ListRestaurantsActivity">
 
     <ListView
         android:id="@+id/restaurantList"
